<resources>
    <string name="app_name">Quiz_App</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="option1">Option1</string>
    <string name="option2">Option2</string>
    <string name="option3">Option3</string>
    <string name="option4">Option4</string>
    <string name="_0_10">0/10</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="tassadaq">Tassadaq</string>
</resources>