<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/iv_background"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/scoreboard"
        android:text="@string/scoreboard"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/name_field"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:textSize="28sp"
        android:textColor="#005753"
        android:text="@string/tassadaq"
        android:textAlignment="center"
        android:layout_marginTop="100dp"/>
    <TextView
        android:id="@+id/etscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:textSize="28sp"
        android:textColor="#005753"
        android:text="@string/_0_10"
        android:textAlignment="center"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/btnShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="25dp"
        android:text="Share"
        android:background="@drawable/btn_shape"
        android:textColor="@android:color/white"
        android:textSize="18sp"/>
    <ImageView
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="20dp"
        android:src="@drawable/circle_background" />
</LinearLayout>


